changes to home page

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -2,33 +2,75 @@
     Page.Title = "Karthik Badam";
 }
 
-<div id="defaultWork">
-    <p>Research Assistant</p>
-    <p>Purdue University</p>
-    <p>465 NorthWestern Avenue, West Lafayette, IN 47906, USA.</p>
-</div>
+<div id="defaultWork" class="mainContactDiv">
+    <p style="font-weight: 800">Contact Information</p>
+    <p>Sriram Karthik Badam </p>
+    <p>Research Assistant </p>
+    <p>Purdue University </p>
+    <p>465 NorthWestern Avenue</p>
+    <p>West Lafayette, IN 47907-2035, USA</p>
 
-<div id="defaultEmail">
+
+    <p style="font-weight: 800; padding-top: 10px">Email</p>
     <p><a>sbadam@purdue.edu</a></p>
     <p><a>sriram.karthik6@gmail.com</a></p>
-</div>
 
-<div id="defaultPhone">
+    <p style="font-weight: 800; padding-top: 10px">Phone</p>
     <p><a>(mobile) +1 (765) 491 1767</a></p>
-    <p><a>(work) +1 (765) </a></p>
 </div>
 
-<div id="defaultKeyWords">
+<div id="defaultKeyWords" class="mainKeyWordDiv">
+    <p style="font-weight: 800">Keywords</p>
+
     <ul>
         <li>
-            Human Computer Interaction.
+            <p>Human Computer Interaction.</p>
         </li>
 
         <li>
-            Visualization.
+            <p>Visualization.</p>
         </li>
         <li>
-            Visual Analytics.
+            <p>Visual Analytics.</p>
         </li>
-    </ul>   
+    </ul>
+
+    <p style="font-weight: 800; padding-top: 10px">News & Events</p>
+    <ul>
+        <li>
+            <p>>> <a href="avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presenting work on performance of direct-touch tablets for sketching</p>
+        </li>
+
+        <li>
+            <p>>> <a href="chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presenting <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
+        </li>
+
+        <li>
+            <p>>> <a href="https://engineering.purdue.edu/pivot/pmwiki.php?n=Main.HomePage">Pivot Lab</a> -- For more details on what we do.</p>
+        </li>
+        <li>
+            <p>>> Next Target: <a href="http://www.computer.org/portal/web/tvcg">IEEE TVCG</a> -- TimeFork project before July 2014</p>
+        </li>
+    </ul>
+
+</div>
+
+<div id="advisorDetails">
+    <p style="font-weight: 800">Advisor</p>
+    <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a>, 
+       the best mentor and a great friend a grad student can ask for.
+       As an undergrad, I was introduced to HCI in my final year and I worked on an Android application 
+       for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
+       I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
+       at Indian Institute of Technology Hyderabad, without much clue of my research directions, 
+       but rather a vague idea of applying my knowledge of computer vision and machine learning to processes with human-in-the-loop.
+       Niklas has been guiding me over the past two years through the process of transforming into someone 
+       who knows what he does and what he can do. His constant influence has inspired me to target academicia to propagate my knowledge
+       after my Ph.D..
+
+    <p style="font-weight: 800; padding-top: 10px">Advisees</p>
+    <p><a style="font-weight: 800; color: #000">None</a>. 
+      If you are interested, feel free to contact me and we can figure something out 
+      after I am anointed with a "Dr." title. ;)</p>
+    
 </div>
