--- a/Content/Site.css
+++ b/Content/Site.css
@@ -29,10 +29,10 @@ blockquote, q {
     quotes: none;
 }
 
-    blockquote:before, blockquote:after, q:before, q:after {
-        content: '';
-        content: none;
-    }
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
 
 table {
     border-collapse: collapse;
@@ -66,10 +66,10 @@ a {
     color: #323232;
 }
 
-    a:hover {
-        background-color: transparent;
-        color: #323232;
-    }
+a:hover {
+    background-color: transparent;
+    color: #323232;
+}
 
 #page {
     width: 1080px;
@@ -83,39 +83,39 @@ header {
     margin-right: 30px;
 }
 
-    header p {
-        font-size: 14px;
-        line-height: 20px;
-        margin-bottom: 20px;
-    }
+header p {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 20px;
+}
 
 nav {
     margin-top: 30px;
 }
 
-    nav a {
-        background: transparent;
-        text-decoration: none;
-        color: #323232;
-        font-size: 18px;
-        padding: 10px 15px 8px 15px;
-        display: inline-block;
-        text-transform: uppercase;
-        border-top: 2px solid transparent;
-        outline: none;
-    }
+nav a {
+    background: transparent;
+    text-decoration: none;
+    color: #323232;
+    font-size: 18px;
+    padding: 10px 15px 8px 15px;
+    display: inline-block;
+    text-transform: uppercase;
+    border-top: 2px solid transparent;
+    outline: none;
+}
 
-        nav a:hover {
-            background-color: #323232;
-            color: #D6F870;
-            border-top: 1px solid #D6F870;
-        }
+nav a:hover {
+    background-color: #323232;
+    color: #D6F870;
+    border-top: 1px solid #D6F870;
+}
 
-        nav a.current {
-            background-color: #323232;
-            color: #D6F870;
-            border-top: 2px solid #D6F870;
-        }
+nav a.current {
+    background-color: #323232;
+    color: #D6F870;
+    border-top: 2px solid #D6F870;
+}
 
 section {
     width: 700px;
@@ -125,10 +125,10 @@ section {
     border-top: 4px solid #323232;
 }
 
-    section p {
-        margin-bottom: 12px;
-        line-height: 150%;
-    }
+section p {
+    margin-bottom: 12px;
+    line-height: 150%;
+}
 
 h1 {
     font-size: 20px;
@@ -146,66 +146,66 @@ article.newsitem {
     background: url(../images/rss.png) no-repeat left top;
 }
 
-    article.newsitem .newsbody, article.twitteritem .twitterbody {
-        margin-left: 17px;
-        padding: 0px 9px 10px;
-    }
+article.newsitem .newsbody, article.twitteritem .twitterbody {
+    margin-left: 17px;
+    padding: 0px 9px 10px;
+}
 
-        article.newsitem .newsbody header, article.twitteritem .twitterbody header {
-            float: none;
-            font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
-            width: 100%;
-            margin-right: 0;
-        }
+article.newsitem .newsbody header, article.twitteritem .twitterbody header {
+    float: none;
+    font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
+    width: 100%;
+    margin-right: 0;
+}
 
-            article.newsitem .newsbody header h1, article.twitteritem .twitterbody header h1 {
-                font-size: 1.2em;
-                font-weight: bold;
-                margin-bottom: 2px;
-            }
+article.newsitem .newsbody header h1, article.twitteritem .twitterbody header h1 {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 2px;
+}
 
-            article.newsitem .newsbody header h2 {
-                font-size: 1.1em;
-                margin-bottom: 5px;
-            }
+article.newsitem .newsbody header h2 {
+    font-size: 1.1em;
+    margin-bottom: 5px;
+}
 
-        article.newsitem .newsbody p, article.twitteritem .twitterbody p {
-            font-size: 1.0em;
-            line-height: 1.0em;
-            margin-bottom: 8px;
-        }
+article.newsitem .newsbody p, article.twitteritem .twitterbody p {
+    font-size: 1.0em;
+    line-height: 1.0em;
+    margin-bottom: 8px;
+}
 
-        article.newsitem .newsbody .pubdate {
-            margin-top: 3px;
-        }
+article.newsitem .newsbody .pubdate {
+    margin-top: 3px;
+}
 
 /* Twitter Styles */
 article.twitteritem {
     background: url("http://twitter.com/favicon.ico") no-repeat left top;
 }
 
-    article.twitteritem .twitterbody header h1 {
-        margin-bottom: 5px;
-    }
+article.twitteritem .twitterbody header h1 {
+    margin-bottom: 5px;
+}
 
-    article.twitteritem .twitterbody .pubdate {
-        margin: -3px 0 5px 0;
-    }
+article.twitteritem .twitterbody .pubdate {
+    margin: -3px 0 5px 0;
+}
 
 ul.twitteractions li {
     display: inline;
     list-style: none;
 }
 
-    ul.twitteractions li a {
-        background: none;
-        color: #999;
-        height: 20px;
-        padding: 0 7px 0 7px;
-        text-decoration: none;
-        text-indent: -9999px;
-        width: 20px;
-    }
+ul.twitteractions li a {
+    background: none;
+    color: #999;
+    height: 20px;
+    padding: 0 7px 0 7px;
+    text-decoration: none;
+    text-indent: -9999px;
+    width: 20px;
+}
 
 
 /* Photos Styles */
@@ -214,75 +214,139 @@ ul.thumbnails {
     padding: 0;
 }
 
-    ul.thumbnails li {
-        position: relative;
-        list-style: none;
-        float: left;
-        margin: 8px;
-        padding: 5px;
-        font-size: small;
-        text-align: center;
-        border: 1px solid transparent;
-        width: 100px;
-        height: 100px;
-        line-height: 100px;
-        display: block;
-    }
+ul.thumbnails li {
+    position: relative;
+    list-style: none;
+    float: left;
+    margin: 8px;
+    padding: 5px;
+    font-size: small;
+    text-align: center;
+    border: 1px solid transparent;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    display: block;
+}
 
-        ul.thumbnails li span {
-            display: block;
-        }
+ul.thumbnails li span {
+    display: block;
+}
 
-            ul.thumbnails li span.image-overlay {
-                display: none;
-                width: 100px;
-                padding: 5px;
-                background-color: #b6ebe3;
-                color: #343434;
-                font-size: 0.8em;
-                /*CSS3 properties*/
-                border-radius: 7px 7px 0 0;
-                -moz-border-radius: 7px 7px 0 0;
-                -webkit-border-radius: 7px 7px 0 0;
-                word-wrap: break-word;
-            }
+ul.thumbnails li span.image-overlay {
+    display: none;
+    width: 100px;
+    padding: 5px;
+    background-color: #b6ebe3;
+    color: #343434;
+    font-size: 0.8em;
+    /*CSS3 properties*/
+    border-radius: 7px 7px 0 0;
+    -moz-border-radius: 7px 7px 0 0;
+    -webkit-border-radius: 7px 7px 0 0;
+    word-wrap: break-word;
+}
 
-            ul.thumbnails li span.below-image {
-                line-height: normal;
-            }
+ul.thumbnails li span.below-image {
+    line-height: normal;
+}
 
-        ul.thumbnails li img {
-            margin: auto;
-            display: inline;
-            vertical-align: middle;
-        }
+ul.thumbnails li img {
+    margin: auto;
+    display: inline;
+    vertical-align: middle;
+}
 
-        ul.thumbnails li:hover {
-            background: #f3f6f7;
-            border-color: #dbe2e5;
-            /*CSS3 properties*/
-            border-radius: 7px;
-            -moz-border-radius: 7px;
-            -webkit-border-radius: 7px;
-            box-shadow: 0px 0px 10px #d0d0d0;
-            -moz-box-shadow: 0px 0px 10px #d0d0d0;
-            -webkit-box-shadow: 0px 0px 10px #d0d0d0;
-        }
+ul.thumbnails li:hover {
+    background: #f3f6f7;
+    border-color: #dbe2e5;
+    /*CSS3 properties*/
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+    box-shadow: 0px 0px 10px #d0d0d0;
+    -moz-box-shadow: 0px 0px 10px #d0d0d0;
+    -webkit-box-shadow: 0px 0px 10px #d0d0d0;
+}
 
-            ul.thumbnails li:hover span.image-overlay {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                line-height: normal;
-            }
+ul.thumbnails li:hover span.image-overlay {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: normal;
+}
 
 .thumbnail-border {
     border: 1px solid #dbe2e5;
     display: block;
 }
 
-.hide-from-desktop
-{
+.hide-from-desktop {
     display: none;
+}
+
+.mainContactDiv {
+    width: 33%;
+    margin: 0px;
+    height: 240px;
+    border: 1px dashed #343434;
+    padding: 5px;
+    display: inline-block;
+    float: left;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.mainContactDiv p {
+    margin: 0px;
+    font-family: Calibri;
+}
+
+#defaultKeyWords {
+    width: 65%;
+    margin-left: 5px;
+    height: 240px;
+    border: 1px dashed #343434;
+    padding: 5px;
+    display: inline-block;
+    float: right;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+#defaultKeyWords p {
+    margin: 0px;
+    font-family: Calibri;
+}
+
+#defaultKeyWords a {
+    margin: 0px;
+    color: #ff6a00;
+    font-family: Calibri;
+}
+
+#advisorDetails {
+    width: 100%;
+    border: 1px dashed #343434;
+    padding: 5px;
+    margin-top: 10px;
+    display: inline-block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+
+#advisorDetails p {
+    margin: 0px;
+    font-family: Calibri;
+}
+
+#advisorDetails a {
+    margin: 0px;
+    color: #ff6a00;
+    font-family: Calibri;
 }
