minor changes to content

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -38,11 +38,11 @@
     <p style="font-weight: 800; padding-top: 10px">News & Events</p>
     <ul>
         <li>
-            <p>>> <a href="avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presenting work on performance of direct-touch tablets for sketching</p>
+            <p>>> <a href="http://avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presenting work on performance of direct-touch tablets for sketching</p>
         </li>
 
         <li>
-            <p>>> <a href="chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presenting <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
+            <p>>> <a href="http://chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presenting <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
         </li>
 
         <li>
@@ -59,14 +59,14 @@
     <p style="font-weight: 800">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a>, 
        the best mentor and a great friend a grad student can ask for.
-       As an undergrad, I was introduced to HCI in my final year and I worked on an Android application 
+       As an undergrad, I was introduced to HCI in my final year, and I worked on an Android application 
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
        I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
        at Indian Institute of Technology Hyderabad, without much clue of my research directions, 
        but rather a vague idea of applying my knowledge of computer vision and machine learning to processes with human-in-the-loop.
-       Niklas has been guiding me over the past two years through the process of transforming into someone 
-       who knows what he does and what he can do. His constant influence has inspired me to target academicia to propagate my knowledge
-       after my Ph.D..
+       My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions 
+       can be found <a href="">here</a>.
+       His constant influence has inspired me to target academia and propagate my knowledge after Ph.D..
 
     <p style="font-weight: 800; padding-top: 10px">Advisees</p>
     <p><a style="font-weight: 800; color: #000">None</a>. 
@@ -74,3 +74,6 @@
       after I am anointed with a "Dr." title. ;)</p>
     
 </div>
+
+
+
