--- a/Contents/_Blog.cshtml
+++ b/Contents/_Blog.cshtml
@@ -5,9 +5,7 @@
 
 @if (String.IsNullOrEmpty(blogUrl)) {
     <p>
-        Welcome to the RSS page! Please view the Contents/_Blog.cshtml page and provide a
-        URL for the blog that you would like to display.  Note that this page only supports 
-        RSS 2.0 and Atom 1.0 feeds.
+        UNDER CONSTRUCTION!
     </p>
 } else {
     var feedItems = BlogHelper.GetFeedItems(blogUrl);
