--- a/Contents/_Teaching.cshtml
+++ b/Contents/_Teaching.cshtml
@@ -1,15 +1,8 @@
 ﻿@{
-    
+    Page.Title = "Karthik Badam";
 }
 
-<!DOCTYPE html>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+<p>
+    UNDER CONSTRUCTION!
+</p>
