--- a/Default.cshtml
+++ b/Default.cshtml
@@ -59,7 +59,7 @@
     <p style="font-weight: 800">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a>, 
        the best mentor and a great friend a grad student can ask for.
-       As an undergrad, I was introduced to HCI in my final year, and I worked on an Android application 
+       As an undergrad, I was introduced to HCI in my senior year, and I worked on an Android application 
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
        I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
        at Indian Institute of Technology Hyderabad, without much clue of my research directions, 
@@ -74,6 +74,12 @@
       after I am anointed with a "Dr." title. ;)</p>
     
 </div>
+
+<div id="footer">
+      &copy; 2014 Karthik Badam
+    </div>
+    @Analytics.GetGoogleHtml("karthikbadam")
+</body>
 
 
 
