--- a/Layouts/_SiteLayout.cshtml
+++ b/Layouts/_SiteLayout.cshtml
@@ -6,6 +6,9 @@
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link rel="shortcut icon" href="~/images/icon.png">
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Content/jquery-2.1.0.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+
     @RenderSection("head", required: false)
 </head>
 <body>
