--- a/Contents/_Facebook.cshtml
+++ b/Contents/_Facebook.cshtml
@@ -10,6 +10,8 @@
         <title></title>
     </head>
     <body>
-        
+         <p>
+        UNDER CONSTRUCTION!
+    </p>
     </body>
 </html>
