--- a/Contents/_Projects.cshtml
+++ b/Contents/_Projects.cshtml
@@ -1,17 +1,26 @@
 ﻿@{
-    
+    Page.Title = "Karthik Badam";
 }
 
-<!DOCTYPE html>
+<p style="font-weight: 800;">
+    Proxemics
+</p>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-         <p>
-        UNDER CONSTRUCTION!
-         </p>
-    </body>
-</html>
+<hr>
+
+<p style="font-weight: 800;">
+    PolyChrome
+</p>
+
+<hr>
+
+<p style="font-weight: 800;">
+    skWiki
+</p>
+
+<hr>
+
+<p style="font-weight: 800;">
+    Munin
+</p>
+
