--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -13,7 +13,7 @@
             "author": "Sriram Karthik Badam, Senthil Chandrasegaran, Niklas Elmqvist, and Karthik Ramani",
             "booktitle": "Proceedings of the ACM Conference on Advanced Visual Interfaces",
             "year": "2014",
-            "pages": "To appear",
+            "pages": "To appear in May",
             "type": "conference"
         },
 
@@ -84,11 +84,10 @@
 </script>
 
 <div id="publicationsDiv">
-    <p style="font-weight: 700;">
-    2014
-    </p>
+    
+    <p style="font-weight: 700;">2014</p>
     <ul id="publicationsList2014">
-
+        
     </ul>
 
     <ul id="publicationsList2015">
