--- a/Content/Site.css
+++ b/Content/Site.css
@@ -53,9 +53,9 @@ table {
 
 body {
     font-size: 13px;
-    font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     color: #323232;
-    background: #f7f5f0 url(../images/background.png) no-repeat right top;
+    background: url(../images/background.png) no-repeat right top;
     margin-top: 80px;
     background-size: 100% 100%;
 }
@@ -77,14 +77,14 @@ a:hover {
 }
 
 header {
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Arial', sans-serif;
     float: left;
     width: 300px;
     margin-right: 30px;
 }
 
 header p {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -124,6 +124,8 @@ section {
     padding: 20px;
     border-top: 4px solid #323232;
     border-bottom: 4px solid #323232;
+    border-left: 1px solid #323232;
+    border-right: 1px solid #323232;
 }
 
 section p {
@@ -154,7 +156,7 @@ article.newsitem .newsbody, article.twitteritem .twitterbody {
 
 article.newsitem .newsbody header, article.twitteritem .twitterbody header {
     float: none;
-    font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Tahoma', 'Helvetica, Arial', 'Helvetica, Arial', sans-serif;
     width: 100%;
     margin-right: 0;
 }
@@ -302,7 +304,7 @@ ul.thumbnails li:hover span.image-overlay {
 
 .mainContactDiv p {
     margin: 0px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
 }
 
 #defaultKeyWords {
@@ -320,13 +322,13 @@ ul.thumbnails li:hover span.image-overlay {
 
 #defaultKeyWords p {
     margin: 0px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
 }
 
 #defaultKeyWords a {
     margin: 0px;
     color: #ff6a00;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
 }
 
 #advisorDetails {
@@ -343,35 +345,35 @@ ul.thumbnails li:hover span.image-overlay {
 
 #advisorDetails p {
     margin: 0px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
 }
 
 #advisorDetails a {
     margin: 0px;
     color: #ff6a00;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
 }
 
 #footer {
     margin-top: 10px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
     color: #999;
 }
 
 #publicationJournal {
     margin-bottom: 5px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
     margin-top: 10px;
 }
 
 #publicationConference {
     margin-bottom: 5px;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
     margin-top: 10px;
 }
 
 #publicationsDiv a {
     color: #ff6a00;
-    font-family: Calibri;
+    font-family: Helvetica, Arial;
     margin-left: 5px;
 }
