--- a/Default.cshtml
+++ b/Default.cshtml
@@ -58,7 +58,7 @@
 <div id="advisorDetails">
     <p style="font-weight: 800">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a>, 
-       the best mentor and a great friend a grad student can ask for.
+       the best mentor and a great friend.
        As an undergrad, I was introduced to HCI in my senior year, and I worked on an Android application 
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
        I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
@@ -66,11 +66,10 @@
        but rather a vague idea of applying my knowledge of computer vision and machine learning to processes with human-in-the-loop.
        My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions 
        can be found <a href="">here</a>.
-       His constant influence has inspired me to target academia and propagate my knowledge after Ph.D..
-
+       
     <p style="font-weight: 800; padding-top: 10px">Advisees</p>
     <p><a style="font-weight: 800; color: #000">None</a>. 
-      If you are interested, feel free to contact me and we can figure something out 
+      If you are interested, feel free to contact me to figure something out 
       after I am anointed with a "Dr." title. ;)</p>
     
 </div>
