--- a/Contents/_Projects.cshtml
+++ b/Contents/_Projects.cshtml
@@ -15,9 +15,10 @@
 <hr>
 
 <p style="font-weight: 800;">
-    skWiki
-    skWiki is a web application framework for collaborative creativity in digital multimedia projects, including text, hand-drawn sketches, and photographs. skWiki overcomes common drawbacks of existing wiki software by providing a rich viewer/editor architecture for all media types that is integrated into the web browser itself, thus avoiding dependence on client-side editors. Instead of files, skWiki uses the concept of paths as trajectories of persistent state over time. skWiki also provides a path viewer to visualize and navigate through the various paths/trajectories created during a collaborative design process.
+    skWiki <br/>
 </p>
+skWiki is a web application framework for collaborative creativity in digital multimedia projects, including text, hand-drawn sketches, and photographs. skWiki overcomes common drawbacks of existing wiki software by providing a rich viewer/editor architecture for all media types that is integrated into the web browser itself, thus avoiding dependence on client-side editors. Instead of files, skWiki uses the concept of paths as trajectories of persistent state over time. skWiki also provides a path viewer to visualize and navigate through the various paths/trajectories created during a collaborative design process.
+
 
 <hr>
 
