--- a/Default.cshtml
+++ b/Default.cshtml
@@ -57,9 +57,9 @@
 
 <div id="advisorDetails">
     <p style="font-weight: 800">Advisor</p>
-    <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a>, 
-       the best mentor and a great friend.
-       As an undergrad, I was introduced to HCI in my senior year, and I worked on an Android application 
+    <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a> as a 
+        Graduate Research Assistant.
+       During my undergrad, I worked on Android application development
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
        I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
        at Indian Institute of Technology Hyderabad, without much clue of my research directions, 
