--- a/Content/Site.css
+++ b/Content/Site.css
@@ -53,7 +53,7 @@ table {
 
 body {
     font-size: 12px;
-    font-family: Calibri, calibri, sans-serif;
+    font-family: "Source Sans Pro", Calibri, calibri, sans-serif;
     color: #323232;
     background: url(../images/background.png) no-repeat right top;
     margin-top: 80px;
@@ -77,7 +77,7 @@ a:hover {
 }
 
 header {
-    font-family: Calibri, sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     float: left;
     width: 25%;
     margin-left: 30px;
@@ -301,11 +301,12 @@ ul.thumbnails li:hover span.image-overlay {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    font-size: 100%;
 }
 
 .mainContactDiv p {
     margin: 0px;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
 }
 
 #defaultKeyWords {
@@ -319,18 +320,18 @@ ul.thumbnails li:hover span.image-overlay {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    
+    font-size: 100%;
 }
 
 #defaultKeyWords p {
     margin: 0px;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
 }
 
 #defaultKeyWords a {
     margin: 0px;
     color: #ff6a00;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
 }
 
 #advisorDetails {
@@ -342,41 +343,41 @@ ul.thumbnails li:hover span.image-overlay {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    font-size: 14px;
+    font-size: 100%;
 }
 
 
 #advisorDetails p {
     margin: 0px;
-    font-family: calibri;
+    font-family: sans-serif;
 }
 
 #advisorDetails a {
     margin: 0px;
     color: #ff6a00;
-    font-family: calibri;
+    font-family: sans-serif;
 }
 
 #footer {
     margin-top: 10px;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
     color: #999;
 }
 
 #publicationJournal {
     margin-bottom: 5px;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
     margin-top: 10px;
 }
 
 #publicationConference {
     margin-bottom: 5px;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
     margin-top: 10px;
 }
 
 #publicationsDiv a {
     color: #ff6a00;
-    font-family: calibri;
+    font-family: 'Source Sans Pro';
     margin-left: 5px;
 }
