--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -86,7 +86,7 @@
 
 <div id="publicationsDiv">
     
-    <p style="font-weight: 500;">2014</p>
+    <p style="font-weight: 500; font-size: 20px;">2014</p>
     <ul id="publicationsList2014">
         
     </ul>
