--- a/Contents/_Projects.cshtml
+++ b/Contents/_Projects.cshtml
@@ -2,27 +2,60 @@
     Page.Title = "Karthik Badam";
 }
 
-<p style="font-weight: 800;">
+<div id="projectsDiv">
+<p style="font-weight: 800; ; font-size: 20px;">
     Proxemics
 </p>
+<p>
+Proxemic Lens is an interaction technique for exploring multiscale visualizations using explicit gestures as
+well as proxemics: the spatial relations between people and physical artifacts such as their distance, orientation, and movement.
+The technique is intended for collaborative environments with large wall displays and is based on focus+context lenses that show a
+detailed view of the selected content from an overview visualization. Each lens is controlled by both proxemics and mid-air gestures.
+In this paper, we discuss different design considerations for implicit and explicit interactions made possible through the Proxemic
+Lens, and perform a user study to find a balance between implicit and explicit interaction styles. Our findings indicate that users favor
+proxemic interactions for navigation and collaboration, but prefer using explicit mid-air gestures to perform actions that are perceived
+to be direct, such as terminating a lens composition. Furthermore, the use of multiple mid-air gestures for a single analytics task was
+deemed to require high physical effort resulting in low accuracy. Based on these results, we propose a hybrid technique utilizing both
+proxemics and mid-air gestures, along with several examples for applying Proxemic Lens technique to various datasets.
+</p>
+
+
+<img src="../data/proxLenses.png" width="100%" alt="Proxemics">
 
 <hr>
 
-<p style="font-weight: 800;">
+<p style="font-weight: 800; ; font-size: 20px;">
     PolyChrome
 </p>
+<p>
+PolyChrome is a web application framework for sharing interactions
+and managing display space of various devices in collaborative
+settings. The framework is built entirely in JavaScript and the
+participating devices need only a modern web browser to utilize
+PolyChrome. PolyChrome provides three distinct contributions to the community
+building collaborative visualizations: (1) It distributes legacy
+visualizations for the web across multiple devices and share the interactions.
+This can be helpful in using websites that invite social
+analysis of a visualization such as ManyEyes collaboratively, (2)
+provides the necessary interaction event and display space distribution
+mechanisms to create new collaborative web visualizations for
+multiple users and devices. This is useful for designing web visualization
+sites that allow all types of collaboration, including the four
+combinations of synchronous vs. asynchronous and co-located vs. distributed collaboration, (3) provides ability to store the interactions
+of users for replay, conflict, and consistency management.
+</p>
+
+<img src="../data/polychrome.png" width="100%" alt="PolyChrome">
 
 <hr>
 
-<p style="font-weight: 800;">
+<p style="font-weight: 800; font-size: 20px;">
     skWiki <br/>
 </p>
+<p>
 skWiki is a web application framework for collaborative creativity in digital multimedia projects, including text, hand-drawn sketches, and photographs. skWiki overcomes common drawbacks of existing wiki software by providing a rich viewer/editor architecture for all media types that is integrated into the web browser itself, thus avoiding dependence on client-side editors. Instead of files, skWiki uses the concept of paths as trajectories of persistent state over time. skWiki also provides a path viewer to visualize and navigate through the various paths/trajectories created during a collaborative design process.
-
-
-<hr>
-
-<p style="font-weight: 800;">
-    Munin
 </p>
 
+<img src="../data/skwiki.png" width="100%" alt="skWiki">
+
+</div>
