--- a/Contents/_Blog.cshtml
+++ b/Contents/_Blog.cshtml
@@ -6,6 +6,8 @@
 @if (String.IsNullOrEmpty(blogUrl)) {
     <p>
         UNDER CONSTRUCTION!
+        <img src="../data/page_not_found.gif" width="100%" alt="Proxemics">
+
     </p>
 } else {
     var feedItems = BlogHelper.GetFeedItems(blogUrl);
