--- a/Contents/_Facebook.cshtml
+++ b/Contents/_Facebook.cshtml
@@ -12,6 +12,7 @@
     <body>
          <p>
         UNDER CONSTRUCTION!
+        <img src="../data/page_not_found.gif" width="100%" alt="Proxemics">
     </p>
     </body>
 </html>
