--- a/Contents/_Photos.cshtml
+++ b/Contents/_Photos.cshtml
@@ -6,8 +6,7 @@
 
 @if (String.IsNullOrEmpty(flickrKey) || String.IsNullOrEmpty(flickrUserName)) {
     <p>
-        Welcome to the Photos Page! Please look at the Contents/_Photos.cshtml page and set up Flickr photo display.
-        You can get Flickr API keys from the <a href="http://www.flickr.com/services/apps/create/apply">Flickr Website</a>.
+                <img src="../data/page_not_found.gif" width="100%" alt="Proxemics">
     </p>
 } else {
     var photos = Flickr.GetPhotos(flickrKey, flickrUserName);
