--- a/Default.cshtml
+++ b/Default.cshtml
@@ -15,8 +15,9 @@
     <p><a>sbadam@purdue.edu</a></p>
     <p><a>sriram.karthik6@gmail.com</a></p>
 
-    <p style="font-weight: 800; padding-top: 10px">Phone</p>
-    <p><a>(mobile) +1 (765) 491 1767</a></p>
+    <p style="font-weight: 800; padding-top: 10px">Resume</p>
+    <a href="data/badam_resume.pdf" style="color: #ff6a00">badam_resume.pdf</a>
+    
 </div>
 
 <div id="defaultKeyWords" class="mainKeyWordDiv">
